--- a/src/components/AddForm/AddForm.css
+++ b/src/components/AddForm/AddForm.css
@@ -1,7 +1,45 @@
+.add-form__container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .add-form {
   width: 400px;
   height: 400px;
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.add-form__legend {
+  text-align: center;
+  font-weight: 700;
+}
+
+.add-form__label {
+  margin-bottom: 5px;
+  margin-top: 15px;
+}
+
+.add-form__input {
+  height: 30px;
+  padding: 12px;
+}
+
+.add-form__radio {
+  margin: 5px;
+}
+
+.add-form__btn {
+  margin: 50px auto;
+  width: 50%;
+  height: 40px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 700;
 }
