--- a/src/components/ProfileTop/ProfileTop.css
+++ b/src/components/ProfileTop/ProfileTop.css
@@ -95,6 +95,10 @@ td {
   padding-left: 10px;
 }
 
+/* .td__white {
+  background-color: #ffffff;
+} */
+
 @media only screen and (min-width: 1000px) {
   .company__box {
   }
