updated delete and patch actions

--- a/src/components/ProfileForm/ProfileForm.css
+++ b/src/components/ProfileForm/ProfileForm.css
@@ -45,6 +45,6 @@
 
 .places__container {
   background-color: #ffffff;
-  width: 300px;
-  position: absolute;
+  width: 420px;
+  /* position: absolute; */
 }
