--- a/src/components/RegisterForm/RegisterForm.css
+++ b/src/components/RegisterForm/RegisterForm.css
@@ -16,7 +16,7 @@
 .register-form__sec {
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 5px;
 }
 
 .register-form__padding {
@@ -46,6 +46,7 @@
   width: 100%;
   height: 50px;
   color: #ffffff;
+  margin-top: 10px;
 }
 
 @media only screen and (min-width: 668px) {
@@ -60,6 +61,14 @@
   .register-form__row {
     display: flex;
     justify-content: center;
+  }
+
+  .flex--column {
+    flex-direction: column;
+  }
+
+  .register-form__input {
+    width: 420px;
   }
 
   .register__btn {
