--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -7,6 +7,7 @@
 .wave {
   position: relative;
   background: #39b18d;
+  /* background: #2451b2; */
 }
 
 .wave:before {
@@ -38,9 +39,11 @@
   text-align: center;
 }
 
-h1 {
-  font-family: "Monoton";
-  font-weight: 500;
+.header__1 {
+  font-family: "Roboto";
+  font-weight: 300;
+  /* position: relative;
+  left: 40px; */
 }
 
 .landing__header--margin {
