--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -56,7 +56,18 @@
   display: block;
 }
 
+.login-btn__container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
 .login__btn {
+  margin: 0 auto;
+  background-color: #db3742;
+  color: #ffffff;
+  border-radius: 5px;
 }
 
 @media only screen and (min-width: 668px) {
@@ -74,6 +85,7 @@
 
   .login__btn {
     width: 150px;
-    height: 30px;
+    height: 50px;
+    font-size: 16px;
   }
 }
