--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,41 +1,52 @@
 header,
 .nav {
-    height: 65px; 
-    width: 100%
+  height: 65px;
+  width: 100%;
 }
 
 header {
-    top: 0;
-    left: 0;
-    background-color: grey;
+  top: 0;
+  left: 0;
+  background-color: #ffffff;
+  color: #39b18d;
+  box-shadow: 1px 1px 1px 1px #d3d3d3;
 }
 
 .nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav__head {
-    margin-left: 20px; 
+  margin-left: 20px;
 }
 
 .nav__ul {
-    display: flex;
+  display: flex;
 }
 
 .nav__li {
-    list-style: none;
-    margin-right: 20px; 
+  list-style: none;
+  margin-right: 20px;
+}
+
+.nav__link {
+  text-decoration: none;
+  color: #39b18d;
+}
+
+.nav__link:hover {
+  text-decoration: underline;
 }
 
 @media only screen and (min-width: 1000px) {
-    header {
-        display: flex;
-        justify-content: center;
-    }
+  header {
+    display: flex;
+    justify-content: center;
+  }
 
-    .nav {
-        max-width: 960px; 
-    }
+  .nav {
+    max-width: 960px;
+  }
 }
