--- a/src/components/RegisterForm/RegisterForm.css
+++ b/src/components/RegisterForm/RegisterForm.css
@@ -49,6 +49,21 @@
   margin-top: 10px;
 }
 
+.msg__container {
+  margin: 0 auto;
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.msg__header,
+.msg__link {
+  text-align: center;
+  color: #ffffff;
+  padding: 10px;
+}
+
 @media only screen and (min-width: 668px) {
   .register-form {
     max-width: 550px;
@@ -73,5 +88,13 @@
 
   .register__btn {
     width: 420px;
+  }
+
+  .msg__header {
+    font-size: 40px;
+  }
+
+  .msg__link {
+    font-size: 32px;
   }
 }
