--- a/src/components/AddForm/AddForm.css
+++ b/src/components/AddForm/AddForm.css
@@ -4,10 +4,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background: #fff;
 }
 
 .add-form {
-  width: 400px;
+  width: 300px;
   height: 400px;
   background-color: #ffffff;
   display: flex;
@@ -24,6 +25,7 @@
 .add-form__label {
   margin-bottom: 5px;
   margin-top: 15px;
+  margin-right: 10px;
   display: block;
 }
 
@@ -35,13 +37,25 @@
 
 .add-form__radio {
   margin: 5px;
+  margin-left: 10px;
+}
+
+.radio--margin {
+  margin-left: 20px;
 }
 
 .add-form__btn {
-  margin: 50px auto;
+  margin: 30px auto;
   width: 50%;
   height: 40px;
   border-radius: 5px;
   font-size: 16px;
   font-weight: 700;
+}
+
+@media only screen and (min-width: 768px) {
+  .add-form__container {
+    width: 90%;
+    box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.295);
+  }
 }
