--- a/src/components/InfoSection/InfoSection.css
+++ b/src/components/InfoSection/InfoSection.css
@@ -1,8 +1,5 @@
 .section__container {
-  display: flex;
-  width: 960px;
   margin: 0 auto;
-  justify-content: space-around;
   margin-top: 100px;
 }
 
@@ -18,4 +15,19 @@
 
 span__header {
   font-weight: bold;
+}
+
+@media only screen and (min-width: 568px) {
+  .section__container {
+    display: flex;
+    margin: 0 auto;
+    margin-top: 100px;
+    justify-content: space-around;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  .section__container {
+    width: 960px;
+  }
 }
