--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -65,9 +65,10 @@
 
 .login__btn {
   margin: 0 auto;
-  background-color: #db3742;
   color: #ffffff;
-  border-radius: 5px;
+  width: 150px;
+  height: 35px;
+  font-size: 16px;
 }
 
 @media only screen and (min-width: 668px) {
@@ -84,8 +85,6 @@
   }
 
   .login__btn {
-    width: 150px;
     height: 50px;
-    font-size: 16px;
   }
 }
