--- a/src/components/ProfileTop/ProfileTop.css
+++ b/src/components/ProfileTop/ProfileTop.css
@@ -1,38 +1,40 @@
 .company__box {
+  background: #fff;
+  min-width: 300px;
+  margin-top: 30px;
   padding: 20px;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.295);
 }
 
 .profile-img__container {
   width: 100%;
   height: 150px;
   display: flex;
-  justify-content: flex-start;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
 .profile-img {
-  margin-right: 30px;
+  margin-bottom: 15px;
   border-radius: 50%;
-  max-width: 150px;
+  max-width: 100px;
 }
 
 .add__btn {
   height: 50px;
   width: 150px;
-  margin-right: 30px;
-  border: none;
-  background-color: #da3843;
-  border-radius: 5px;
-  color: #ffffff;
 }
 
 .add__btn:hover {
   cursor: pointer;
 }
 
-.company-donation__box {
+/* .company-donation__box {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,60 +49,37 @@
 .company-donation__p {
   margin: 20px;
   text-align: center;
-}
+} */
 
 .company-contact__box {
-  margin: 0 auto;
-  width: 100%;
+  margin: 20px auto 0 auto;
   padding: 20px;
   display: flex;
-  justify-content: space-evenly;
-  text-align: center;
-  background-color: #312b2b;
-  color: #ffffff;
-  /* background-color: #39b18d88; */
-  border: 1px solid rgba(0, 0, 0, 0.116);
-  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.295);
+  flex-direction: column;
+  text-align: left;
+  background-color: #fff;
+  box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.295);
+  /* box-shadow: 1px 1px 1px 1px #d3d3d3; */
 }
 
 .contact__p {
   text-align: center;
+  padding: 5px;
 }
 
 .box-1__container {
   padding: 20px;
 }
 
-.table__container {
-  width: 100%;
-  padding: 20px;
-}
-
-.table__header {
-  text-align: center;
-  margin-bottom: 30px;
-}
-
-.table {
-  margin: 10px auto;
-  width: 80%;
-}
-
-.table tr:nth-child(odd) {
-  background-color: #39b18d54;
-}
-
-td {
-  padding: 5px;
-  padding-left: 10px;
-}
-
-/* .td__white {
-  background-color: #ffffff;
-} */
-
 @media only screen and (min-width: 1000px) {
   .company__box {
+    max-width: 960px;
+  }
+
+  .company-contact__box {
+    max-width: 960px;
+    flex-direction: row;
+    justify-content: space-evenly;
   }
 
   .info__conatainer {
@@ -109,7 +88,6 @@ td {
 
   .box-1 {
     width: 40vw;
-    /* border: 1px solid black; */
   }
 
   .box-1__container {
