--- a/src/components/RegisterForm/RegisterForm.css
+++ b/src/components/RegisterForm/RegisterForm.css
@@ -1,7 +1,9 @@
 .register-form {
   padding: 20px;
-  width: 70vw;
+  width: 100vw;
   margin: 0 auto;
+  /* background-color: #39b18d; */
+  background: #1a66eb;
 }
 
 .register-form__fieldset {
@@ -43,7 +45,7 @@
   border: none;
   border-radius: 5px;
   background-color: #da3843;
-  width: 100%;
+  width: 200px;
   height: 50px;
   color: #ffffff;
   margin-top: 10px;
@@ -64,7 +66,7 @@
   padding: 10px;
 }
 
-@media only screen and (min-width: 668px) {
+@media only screen and (min-width: 568px) {
   .register-form {
     max-width: 550px;
   }
