--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
   font-family: sans-serif;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   overflow-x: hidden;
   height: 100%;
@@ -14,8 +18,16 @@ body {
   height: 100%;
 }
 
+.app__container {
+  /* height: 100%; */
+}
+
 main {
   height: 100%;
+}
+
+.white {
+  background: #fff;
 }
 
 /* headers */
