--- a/src/components/LandingNav/LandingNav.css
+++ b/src/components/LandingNav/LandingNav.css
@@ -2,3 +2,21 @@
   text-decoration: none;
   color: white;
 }
+
+.landing__h1 {
+  font-size: 22px;
+}
+.landing__top {
+  margin: 0 auto;
+  max-width: 1100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+}
+
+@media only screen and (min-width: 768px) {
+  .landing__h1 {
+    font-size: 30px;
+  }
+}
