--- a/src/components/AddForm/AddForm.css
+++ b/src/components/AddForm/AddForm.css
@@ -58,7 +58,13 @@ input[type="date"]::-webkit-inner-spin-button {
   font-weight: 700;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 568px) and (max-width: 999px) {
+  .add-form__legend {
+    font-size: 30px;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
   .add-form__container {
     width: 90%;
     box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.295);
