--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -7,9 +7,7 @@ header,
 header {
   top: 0;
   left: 0;
-  /* background-color: #ffffff; */
-  background-color: #1a66eb;
-  /* background-color: #945d60; */
+  background-color: #00008b;
   color: #fff;
   box-shadow: 1px 1px 1px 1px #d3d3d3;
 }
@@ -24,24 +22,74 @@ header {
   margin-left: 20px;
 }
 
+.dropdown {
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  /* display: block; */
+  display: none;
+  position: absolute;
+  z-index: 10;
+}
+
+/* .dropdown:hover {
+  cursor: pointer;
+} */
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
 .nav__ul {
-  display: flex;
+  width: 120px;
+  background-color: #00008b;
+  position: relative;
+  right: 60px;
+  box-shadow: 0px 8px 16px 0px #00000033;
+  border-radius: 5px;
 }
 
 .nav__li {
   list-style: none;
-  margin-right: 20px;
+  padding: 20px;
+  width: 100%;
 }
 
 .nav__link {
   text-decoration: none;
-  /* color: #39b18d; */
-  /* color: rgb(65, 105, 225); */
   color: #fff;
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+}
+
+.nav__btn {
+  width: 100%;
+  height: 100%;
+}
+
+.nav__li:hover,
+.nav__link:hover {
+  text-decoration: underline;
+}
+
+.nav__li:hover {
+  background: #add8e6a1;
 }
 
 .nav__link:hover {
-  text-decoration: underline;
+  cursor: pointer;
 }
 
 @media only screen and (min-width: 1000px) {
