--- a/src/components/ProfileForm/ProfileForm.css
+++ b/src/components/ProfileForm/ProfileForm.css
@@ -7,7 +7,7 @@
 .profile-form {
   display: flex;
   flex-direction: column;
-  background-color: #39b18d;
+  background-color: #00008b;
   border-radius: 5px;
   /* height: 375px; */
   width: 60%;
