--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -6,6 +6,13 @@
   background-color: #da3843;
   margin-top: 5px;
   display: inline-block;
-  position: absolute;
-  max-width: 300px;
+  /* position: absolute; */
+  max-width: 200px;
+}
+
+@media only screen and (min-width: 567px) {
+  .form__error {
+    /* position: absolute; */
+    max-width: 300px;
+  }
 }
