--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -41,12 +41,12 @@
 
 .results__container {
   background: #fff;
-  width: 300px;
+  width: 200px;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
   position: relative;
-  right: 85px;
+  bottom: 53px;
   border-radius: 5px;
 }
 
@@ -108,11 +108,33 @@
   width: 150px;
 }
 
+.icon__wrapper {
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  position: absolute;
+  bottom: 50px;
+}
+
+.icon--arrow {
+  text-align: center;
+}
+
+.icon__anchor {
+  color: white;
+}
+
+.icon__anchor:hover {
+  color: #ff2a38;
+  transition: 0.5s;
+}
+
 @media only screen and (min-width: 568px) {
   .landing__container {
     padding: 30px;
     height: 120vh;
     color: white;
+    overflow-x: hidden;
   }
 
   .header__1 {
@@ -126,7 +148,7 @@
   }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 767px) {
   .section--sm {
     height: 30vh;
     margin-top: 50px;
@@ -136,6 +158,23 @@
 
   .header--margin {
     margin-top: 25px;
+  }
+
+  .results__container {
+    width: 300px;
+    right: 85px;
+    bottom: 0;
+  }
+
+  .icon--arrow {
+    position: relative;
+    right: 40px;
+  }
+}
+
+@media only screen and (min-width: 1024px) and (max-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
+  .icon__wrapper {
+    bottom: 400px;
   }
 }
 
@@ -147,14 +186,15 @@
 
   .wave {
     position: relative;
-    /* background: #39b18d; */
-    /* background: #2451b2; */
     background: #00008b;
-    /* background: #3c7e3c; */
   }
 
   .header__1 {
     font-size: 30px;
+  }
+
+  .icon__wrapper {
+    bottom: 150px;
   }
 }
 
