--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -47,6 +47,10 @@ header {
   cursor: pointer;
 } */
 
+.dropbtn:hover {
+  cursor: pointer;
+}
+
 .dropdown:hover .dropdown-content {
   display: block;
 }
@@ -69,7 +73,7 @@ header {
 .nav__link {
   text-decoration: none;
   color: #fff;
-  display: inline-block;
+  display: block;
   height: 100%;
   width: 100%;
 }
