--- a/src/components/ProfileTop/ProfileTop.css
+++ b/src/components/ProfileTop/ProfileTop.css
@@ -61,6 +61,10 @@
 }
 
 @media only screen and (min-width: 1000px) {
+  .company__header {
+    font-size: 40px;
+  }
+
   .company__box {
     max-width: 960px;
   }
