--- a/src/components/RegisterForm/RegisterForm.css
+++ b/src/components/RegisterForm/RegisterForm.css
@@ -34,6 +34,8 @@
   display: block;
   height: 50px;
   width: 200px;
+  padding: 8px;
+  font-size: 16px;
 }
 
 .path__container {
@@ -68,6 +70,10 @@
 
 .options__container {
   background: #fff;
+  width: 200px;
+  position: relative;
+  bottom: 75px;
+  left: 152px;
 }
 
 .options__li {
@@ -99,7 +105,7 @@
   padding: 5px;
 }
 
-@media only screen and (min-width: 568px) {
+@media only screen and (min-width: 567px) {
   .register-form {
     max-width: 550px;
   }
@@ -138,5 +144,10 @@
   .register__error {
     position: relative;
     top: 33px;
+  }
+
+  .options__container {
+    width: 420px;
+    left: 45px;
   }
 }
