--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -112,8 +112,8 @@
   width: 100%;
   margin: 0 auto;
   text-align: center;
-  position: absolute;
-  bottom: 50px;
+  position: relative;
+  top: 100px;
 }
 
 .icon--arrow {
@@ -170,6 +170,10 @@
     position: relative;
     right: 40px;
   }
+
+  .icon__wrapper {
+    top: 150px;
+  }
 }
 
 @media only screen and (min-width: 1024px) and (max-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
@@ -191,10 +195,6 @@
 
   .header__1 {
     font-size: 30px;
-  }
-
-  .icon__wrapper {
-    bottom: 150px;
   }
 }
 
