--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -206,7 +206,8 @@
     left: 0;
     width: 100%;
     height: 250px;
-    background: url("https://uploads.codesandbox.io/uploads/user/14efc214-6667-491a-83e8-91c60da79942/T9or-wave.png");
+    /* background: url("https://uploads.codesandbox.io/uploads/user/14efc214-6667-491a-83e8-91c60da79942/T9or-wave.png"); */
+    background: url("../../assets/wave.png");
     background-size: cover;
     background-repeat: no-repeat;
   }
