--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -2,20 +2,12 @@
   text-align: center;
 }
 
-.login__container {
-  width: 100vw;
-  height: 90vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .login-form {
   padding: 20px;
   width: 70vw;
   margin: 0 auto;
   border-radius: 5px;
+  min-width: 300px;
 }
 
 .login-form__fieldset {
@@ -35,8 +27,8 @@
 
 .login-form__sec div {
   /* width: 100%; */
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column; */
 }
 
 .login-form__padding {
@@ -52,6 +44,7 @@
   display: block;
   padding: 8px;
   font-size: 16px;
+  width: 100%;
 }
 
 .login-btn__container {
