--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -12,6 +12,11 @@ header {
   box-shadow: 1px 1px 1px 1px #d3d3d3;
 }
 
+.header__link {
+  text-decoration: none;
+  color: white;
+}
+
 .nav {
   display: flex;
   justify-content: space-between;
