--- a/src/components/AddForm/AddForm.css
+++ b/src/components/AddForm/AddForm.css
@@ -38,6 +38,11 @@ input[type="date"]::-webkit-inner-spin-button {
   height: 30px;
   padding: 12px;
   display: block;
+  width: 100%;
+  height: 2.42em;
+  border-radius: 3px;
+  border: 1px solid #d5d5d5;
+  font-size: 1em;
 }
 
 .add-form__radio {
