--- a/src/components/AddForm/AddForm.css
+++ b/src/components/AddForm/AddForm.css
@@ -38,7 +38,7 @@ input[type="date"]::-webkit-inner-spin-button {
   height: 30px;
   padding: 12px;
   display: block;
-  width: 100%;
+  /* width: 100%; */
   height: 2.42em;
   border-radius: 3px;
   border: 1px solid #d5d5d5;
