--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -4,8 +4,8 @@
   height: 100vh;
   width: 100vw;
   color: white;
-  /* background: #39b18d; */
   background: #00008b;
+  min-width: 300px;
 }
 
 .login-path {
