--- a/src/components/InfoSection/InfoSection.css
+++ b/src/components/InfoSection/InfoSection.css
@@ -14,8 +14,8 @@
   margin-bottom: 20px;
 }
 
-span__header {
-  font-weight: bold;
+.span__header {
+  font-weight: 700;
 }
 
 @media only screen and (min-width: 568px) {
