added screenshots and updated README

--- a/src/components/AddForm/AddForm.css
+++ b/src/components/AddForm/AddForm.css
@@ -25,6 +25,7 @@ input[type="date"]::-webkit-inner-spin-button {
 .add-form__legend {
   text-align: center;
   font-weight: 700;
+  font-size: 1.5em;
 }
 
 .add-form__label {
