--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -5,9 +5,16 @@
 
 .register__container {
   overflow: hidden;
+  /* height: 100%; */
 }
 
 .container--blue {
   background: #00008b;
   color: #fff;
+}
+
+@media only screen and (min-width: 823px) {
+  .register__container {
+    height: 100%;
+  }
 }
