--- a/src/components/InfoSection/InfoSection.css
+++ b/src/components/InfoSection/InfoSection.css
@@ -7,6 +7,7 @@
 .section__box {
   padding: 10px;
   margin: 10px;
+  text-align: center;
 }
 
 .landing__icon {
@@ -16,6 +17,11 @@
 
 .span__header {
   font-weight: 700;
+  font-size: 1.25em;
+}
+
+.icon-mobile {
+  width: 50px;
 }
 
 @media only screen and (min-width: 568px) {
@@ -24,6 +30,12 @@
     margin: 0 auto;
     margin-top: 100px;
     justify-content: space-around;
+  }
+}
+
+@media only screen and (min-width: 668px) {
+  .section__box {
+    text-align: left;
   }
 }
 
