--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -112,7 +112,7 @@
   margin: 0 auto;
   text-align: center;
   position: relative;
-  top: 100px;
+  top: 70px;
 }
 
 .icon--arrow {
@@ -130,6 +130,23 @@
 
 .landing__error {
   text-align: center;
+}
+
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (orientation: portrait) {
+  .header--margin {
+    margin-top: 30%;
+  }
+
+  .icon__wrapper {
+    top: 200px;
+  }
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (orientation: portrait) {
+  .icon__wrapper {
+    top: 100px;
+  }
 }
 
 @media only screen and (min-width: 568px) {
@@ -184,9 +201,22 @@
   }
 }
 
-@media only screen and (min-width: 1024px) and (max-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+  .landing__container {
+    height: 50vh;
+  }
+
   .icon__wrapper {
-    bottom: 400px;
+    display: none;
+  }
+}
+@media only screen and (min-device-width: 1024px) and (max-device-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
+  .landing__container {
+    height: 50vh;
+  }
+
+  .icon__wrapper {
+    display: none;
   }
 }
 
