--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,6 +2,12 @@
   padding: 50px;
   color: #ffffff;
   background-color: #2c2323;
+  width: 100%;
+}
+
+.footer__container {
+  max-width: 960px;
+  margin: 0 auto;
 }
 
 .footer__p {
