--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -3,9 +3,11 @@
   padding-top: 5px;
   height: 100vh;
   width: 100vw;
-  color: white;
+  color: #fff;
   background: #00008b;
   min-width: 300px;
+  overflow: hidden;
+  position: relative;
 }
 
 .login-path {
@@ -41,12 +43,12 @@
 
 .results__container {
   background: #fff;
-  width: 200px;
+  width: 250px;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
   position: relative;
-  bottom: 53px;
+  bottom: 60px;
   border-radius: 5px;
 }
 
@@ -111,8 +113,9 @@
   width: 100%;
   margin: 0 auto;
   text-align: center;
-  position: relative;
-  top: 70px;
+  position: absolute;
+  top: 80%;
+  right: 3px;
 }
 
 .icon--arrow {
@@ -132,20 +135,26 @@
   text-align: center;
 }
 
-
-@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (orientation: portrait) {
+@media only screen and (max-device-height: 360px) and (orientation: landscape) {
   .header--margin {
-    margin-top: 30%;
+    margin-top: 10px;
   }
 
   .icon__wrapper {
-    top: 200px;
+    display: none;
   }
 }
 
-@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (orientation: portrait) {
+@media only screen and (min-device-width: 375px) and (orientation: portrait) {
+  .header--margin {
+    margin-top: 30%;
+  }
+}
+
+@media only screen and (max-device-height: 411px) and (orientation: landscape),
+  screen and (max-device-height: 414px) and (orientation: landscape) {
   .icon__wrapper {
-    top: 100px;
+    display: none;
   }
 }
 
@@ -166,9 +175,13 @@
     width: 150px;
     font-size: 18px;
   }
+
+  .icon__wrapper {
+    top: 70%;
+  }
 }
 
-@media only screen and (min-width: 767px) {
+@media only screen and (min-width: 767px) and (min-height: 415px) {
   .section--sm {
     height: 30vh;
     margin-top: 50px;
@@ -186,18 +199,14 @@
     bottom: 0;
   }
 
-  .icon--arrow {
-    position: relative;
-    /* right: 40px; */
-  }
-
-  .icon__wrapper {
-    top: 150px;
-  }
-
   .landing__error {
     position: relative;
     right: 150px;
+  }
+
+  .icon__wrapper {
+    top: 70%;
+    right: 5px;
   }
 }
 
@@ -210,10 +219,10 @@
     display: none;
   }
 }
-@media only screen and (min-device-width: 1024px) and (max-device-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
-  .landing__container {
+@media only screen and (min-device-width: 1024px) and (max-device-height: 1366px) and (orientation: portrait) {
+  /* .landing__container {
     height: 50vh;
-  }
+  } */
 
   .icon__wrapper {
     display: none;
@@ -234,6 +243,10 @@
   .header__1 {
     font-size: 30px;
   }
+
+  .icon__wrapper {
+    right: 10px;
+  }
 }
 
 @media only screen and (min-width: 1025px) {
@@ -244,9 +257,14 @@
     left: 0;
     width: 100%;
     height: 250px;
-    /* background: url("https://uploads.codesandbox.io/uploads/user/14efc214-6667-491a-83e8-91c60da79942/T9or-wave.png"); */
     background: url("../../assets/wave.png");
     background-size: cover;
     background-repeat: no-repeat;
+  }
+}
+
+@media only screen and (min-width: 1366px) and (max-height: 1024px) {
+  .wave:before {
+    display: none;
   }
 }
