--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -29,11 +29,9 @@
   padding: 10px;
 }
 
-.login-form__sec div {
-  /* width: 100%; */
-  /* display: flex; */
-  /* flex-direction: column; */
-}
+/* .login-form__sec div {
+
+} */
 
 .login-form__padding {
   padding-bottom: 30px;
