--- a/src/components/ProfileTable/ProfileTable.css
+++ b/src/components/ProfileTable/ProfileTable.css
@@ -55,6 +55,6 @@ th {
 @media only screen and (min-width: 568px) {
   .td__info,
   .th__info {
-    display: block;
+    display: table-cell;
   }
 }
